Add partials and slider

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Ice-cream</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- Катя -->
+    <include src="./partials/header.html"></include>
+    <!-- Саша -->
+    <include src="./partials/mobile-menu.html"></include>
+    <!-- Максим -->
+    <include src="./partials/hero.html"></include>
+    <!-- Галя -->
+    <include src="./partials/products.html"></include>
+    <!-- Оля -->
+    <include src="./partials/about.html"></include>
+    <!-- Юля -->
+    <include src="./partials/advantages.html"></include>
+    <!-- Олег -->
+    <include src="./partials/gallery.html"></include>
+    <!-- Владимир -->
+    <include src="./partials/reviews.html"></include>
+    <!-- Дима -->
+    <include src="./partials/contacts.html"></include>
+    <!-- Ира -->
+    <include src="./partials/footer.html"></include>
+    <!-- Кирилл -->
+    <include src="./partials/modal.html"></include>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </body>
 </html>
