--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
     <include src="./partials/footer.html"></include>
     <!-- Кирилл -->
     <include src="./partials/modal.html"></include>
+    <include src="./partials/extras.html"></include>
     <script src="./js/modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- Олег -->
