--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link type="image/x-icon" href="./images/ice-cream.ico" rel="shortcut icon">
     <script type="module" src="./index.js"></script>
   </head>
   <body>
